Fixed and updated swagger
